{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 55,
  "lineage": "27f78e0e-90be-a14f-543f-a26957acae85",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mt_tf_eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0591361b0919a85b3",
            "domain": "vpc",
            "id": "eipalloc-0591361b0919a85b3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-227-73-15.compute-1.amazonaws.com",
            "public_ip": "54.227.73.15",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my-tf-igw",
            "aws_vpc.main-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-private-tf-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cfa2ad4242c3168d",
            "arn": "arn:aws:ec2:us-east-1:730335629442:instance/i-05d012c8c9e4eead7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d012c8c9e4eead7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "master",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-039d90370bffd1626",
            "private_dns": "ip-10-0-2-221.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-052184b86a5c63b22",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05ce62d0cf2ef9ec8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9fc289ce3c234e9",
            "tags": {
              "Name": "my-private-tf-server"
            },
            "tags_all": {
              "Name": "my-private-tf-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ce62d0cf2ef9ec8"
            ]
          },
          "dependencies": [
            "aws_security_group.my_tf_sg",
            "aws_subnet.private",
            "aws_vpc.main-tf-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-public-tf-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cfa2ad4242c3168d",
            "arn": "arn:aws:ec2:us-east-1:730335629442:instance/i-0e280ab6ff5406944",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e280ab6ff5406944",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "master",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-020a338fff5f1a10c",
            "private_dns": "ip-10-0-1-57.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.57",
            "public_ip": "3.80.136.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02aa01e70949bce61",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05ce62d0cf2ef9ec8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dab91c1202d1cbb2",
            "tags": {
              "Name": "my-public-tf-server"
            },
            "tags_all": {
              "Name": "my-public-tf-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ce62d0cf2ef9ec8"
            ]
          },
          "dependencies": [
            "aws_security_group.my_tf_sg",
            "aws_subnet.public",
            "aws_vpc.main-tf-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-tf-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335629442:internet-gateway/igw-0358ad6832405cd7c",
            "id": "igw-0358ad6832405cd7c",
            "owner_id": "730335629442",
            "tags": {
              "Name": "my-tf-igw"
            },
            "tags_all": {
              "Name": "my-tf-igw"
            },
            "vpc_id": "vpc-01ae255a25ea31a39"
          },
          "dependencies": [
            "aws_vpc.main-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_tf_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0591361b0919a85b3",
            "association_id": "eipassoc-08b117868d76c8e47",
            "connectivity_type": "public",
            "id": "nat-0713c79420956e275",
            "network_interface_id": "eni-0acdc1db1f68c5232",
            "private_ip": "10.0.1.88",
            "public_ip": "54.227.73.15",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dab91c1202d1cbb2",
            "tags": {
              "Name": "my-tf-nat-gw"
            },
            "tags_all": {
              "Name": "my-tf-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.mt_tf_eip_nat",
            "aws_internet_gateway.my-tf-igw",
            "aws_subnet.public",
            "aws_vpc.main-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c766cd7b036f09351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0713c79420956e275",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c766cd7b036f0935",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.mt_tf_eip_nat",
            "aws_internet_gateway.my-tf-igw",
            "aws_nat_gateway.my_tf_nat_gw",
            "aws_route_table.route_table_private",
            "aws_subnet.public",
            "aws_vpc.main-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0358ad6832405cd7c",
            "id": "r-rtb-062cd32c82f7a7c521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-062cd32c82f7a7c52",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-tf-igw",
            "aws_route_table.route_table_public",
            "aws_vpc.main-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335629442:route-table/rtb-0c766cd7b036f0935",
            "id": "rtb-0c766cd7b036f0935",
            "owner_id": "730335629442",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route-table-private-subnet"
            },
            "tags_all": {
              "Name": "route-table-private-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ae255a25ea31a39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335629442:route-table/rtb-062cd32c82f7a7c52",
            "id": "rtb-062cd32c82f7a7c52",
            "owner_id": "730335629442",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0358ad6832405cd7c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-public-subnet"
            },
            "tags_all": {
              "Name": "route-table-public-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ae255a25ea31a39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e110a14b6e66aa22",
            "route_table_id": "rtb-0c766cd7b036f0935",
            "subnet_id": "subnet-0a9fc289ce3c234e9"
          },
          "dependencies": [
            "aws_route_table.route_table_private",
            "aws_subnet.private",
            "aws_vpc.main-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0871c39ad97df871f",
            "route_table_id": "rtb-062cd32c82f7a7c52",
            "subnet_id": "subnet-0dab91c1202d1cbb2"
          },
          "dependencies": [
            "aws_route_table.route_table_public",
            "aws_subnet.public",
            "aws_vpc.main-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_tf_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335629442:security-group/sg-05ce62d0cf2ef9ec8",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ce62d0cf2ef9ec8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PORTS OPENING",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PORTS OPENING",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PORTS OPENING",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PORTS OPENING",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PORTS OPENING",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-tf-security-group",
            "name_prefix": "",
            "owner_id": "730335629442",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-tf-sg"
            },
            "tags_all": {
              "Name": "my-tf-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ae255a25ea31a39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335629442:subnet/subnet-0a9fc289ce3c234e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9fc289ce3c234e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335629442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-01ae255a25ea31a39"
          },
          "dependencies": [
            "aws_vpc.main-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335629442:subnet/subnet-0dab91c1202d1cbb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dab91c1202d1cbb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335629442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-01ae255a25ea31a39"
          },
          "dependencies": [
            "aws_vpc.main-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335629442:vpc/vpc-01ae255a25ea31a39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06912ebd4af09390f",
            "default_route_table_id": "rtb-0eff045a973ae641d",
            "default_security_group_id": "sg-05b13f759cd65c330",
            "dhcp_options_id": "dopt-009437eacb5b817e6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01ae255a25ea31a39",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eff045a973ae641d",
            "owner_id": "730335629442",
            "tags": {
              "Name": "my-tf-vpc-1"
            },
            "tags_all": {
              "Name": "my-tf-vpc-1"
            }
          }
        }
      ]
    }
  ]
}